通过编译；暂时未实现shift快速移动锁定